deploy: 84449f0ca3a481cd3cd92ad781f54f9b8207d34f

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ $(function() {
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><p><a class="anchor" id="md_README"></a>GPAK is a C library for creating, reading, and manipulating game archive files. It provides an API for working with game assets, making it easy to manage large collections of files within a game project.</p>
+<p><a href="https://github.com/adamfull/pak_archive/actions/workflows/build_test.yml"><img src="https://github.com/adamfull/pak_archive/actions/workflows/build_test.yml/badge.svg" alt="CMake Build and Test" style="pointer-events: none;" class="inline"/></a></p>
 <h1><a class="anchor" id="autotoc_md1"></a>
 Features</h1>
 <ul>
